# VoiceScribe

./: .gitignore  CLAUDE.md  README.md  build.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/: settings.local.json
.claude/rules/: commit.md  python-coding.md  testing.md
app/: __init__.py  application.py  error_handler.py  main_window.py  notification.py  replacements_editor.py  ui_components.py  ui_queue_processor.py
data/: replacements.txt
docs/: CHANGELOG.md  LICENSE  README.md
external_service/: elevenlabs_api.py
scripts/: project_structure.py  project_structure.txt  testcode_structure.txt  version_manager.py
service/: audio_file_manager.py  audio_recorder.py  clipboard_manager.py  keyboard_handler.py  paste_backend.py  recording_controller.py  recording_lifecycle.py  recording_timer.py  replacements.txt  replacements_editor.py  safe_paste_sendinput.py  text_processing.py  text_transformer.py  transcription_handler.py  ui_queue_processor.py
tests/: conftest.py  test_audio_file_manager.py  test_audio_recorder.py  test_elevenlabs_api.py  test_notification.py  test_paste_backend.py  test_recording_controller.py  test_recording_lifecycle.py  test_recording_timer.py  test_replacements_editor.py  test_safe_paste_sendinput.py  test_text_processing.py  test_transcription_handler.py  test_ui_queue_processor.py
tests/app/: conftest.py  test_notification_manager.py  test_replacements_editor.py  test_ui_queue_processor.py
tests/service/: test_audio_recorder.py  (+5 more)
utils/: app_config.py  config.ini  config_manager.py  process_setup.py
(+2 files in other folders)
