[project]
name = "voicescribe"
version = "2.0.2"
requires-python = ">=3.13"
dependencies = [
    "elevenlabs==2.25.0",
    "keyboard==0.13.5",
    "PyAudio==0.2.14",
    "pyperclip==1.9.0",
    "python-dotenv==1.1.1",
]

[dependency-groups]
dev = [
    "coverage==7.9.2",
    "pyinstaller==6.14.2",
    "pyright==1.1.408",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pytest-mock==3.14.1",
]
